--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "keywords": ["astro", "supabase", "landing-page"],
+  "keywords": [
+    "astro",
+    "supabase",
+    "landing-page"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/vercel": "^9.0.2",
     "typescript": "^5.7.2"
   }
 }
